--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "axios-cache-adapter": "^2.7.3",
+    "bulma": "^0.9.2",
+    "masonry-layout": "^4.2.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.14",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
