--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-dog-breeds",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ceci21.github.io/good-dog-lens",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,6 +10,7 @@
     "axios": "^0.21.1",
     "axios-cache-adapter": "^2.7.3",
     "bulma": "^0.9.2",
+    "gh-pages": "^3.1.0",
     "masonry-layout": "^4.2.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -19,6 +21,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
