--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-dog-breeds",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ceci21.github.io/good-dog-lens",
+  "homepage": "https://ceci21.github.io/GoodDogLens",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
